--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -33,5 +33,6 @@ jobs:
                   rc-wording: "RELEASE,alpha,beta"
                   target-branch: "develop"
                   bump-policy: "last-commit"
+                  push: false
             - name: Print tag
               run: echo "${{ steps.version-bump.outputs.newTag }}"
